--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>文件下载</h1>
-    <button id="downloadBtn">开始下载</button>
+    <button id="downloadBtn">Blob 分片下载</button>
     <progress id="progressBar" value="0" max="100"></progress>
     <p id="status"></p>
+
+    <button id="streamBtn">普通下载</button>
+
+    <script src="static/js/taskQueue.js"></script>
     <script src="static/js/fileDownloader.js"></script>
-    <script src="static/js/main.js"></script>
-</body>
+    <script src="static/js/index.js"></script>
+  </body>
 </html>
